# cpp-process

./: CMakeLists.txt  README.md  dockerfile
config/: default_config.json
src/: main.cpp
